<resources>
    <string name="app_name">FinalsGroupBlasting</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_email">Forgot Email?</string>
    <string name="forgot_username">Forgot Username?</string>
    <string name="log_in_btn">Log In</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="email">Email</string>
    <string name="sign_up_for_the_safety_of_your_official_files">Sign Up for the Safety of Your Official Files</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="date_prompt">Select a date</string>
</resources>